# Worker-Management-System

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README_CN.md
include/: boss.h  cfs.hpp  employee.h  manager.h  worker.h  workerManager.h
src/: boss.cpp  employee.cpp  main.cpp  manager.cpp  workerManager.cpp
